--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -37,7 +37,9 @@ include(${PROJECT_SOURCE_DIR}/make/policies.cmake NO_POLICY_SCOPE)
 # drltracelib
 
 set(srcs
-    drltrace.cpp)
+    drltrace.cpp
+    drltrace_libcalls.cpp
+    drltrace_options.cpp)
 
 if (WIN32)
   set(srcs ${srcs} ${PROJECT_SOURCE_DIR}/make/resources.rc)
@@ -92,7 +94,9 @@ copy_and_adjust_drpaths(${CMAKE_RUNTIME_OUTPUT_DIRECTORY} drltracelib)
 ##################################################
 # drltrace frontend
 
-set(front_srcs drltrace_frontend.cpp)
+set(front_srcs
+    drltrace_frontend.cpp
+    drltrace_options.cpp)
 if (WIN32)
   set(front_srcs ${front_srcs} ${PROJECT_SOURCE_DIR}/make/resources.rc)
 endif ()
@@ -123,6 +127,15 @@ install(TARGETS drltrace DESTINATION "${INSTALL_BIN}"
   WORLD_READ WORLD_EXECUTE)
 copy_target_to_device(drltrace)
 copy_and_adjust_drpaths(${CMAKE_RUNTIME_OUTPUT_DIRECTORY} drltrace)
+
+##################################################
+# drltrace config
+
+set(conf_out ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drltrace.config)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace.config ${conf_out} COPYONLY)
+install(FILES ${conf_out} DESTINATION "${INSTALL_BIN}" PERMISSIONS ${owner_access}
+        GROUP_READ WORLD_READ)
+
 ##################################################
 # drltrace tests
 
@@ -133,29 +146,38 @@ if (BUILD_TOOL_TESTS)
   get_target_path_for_execution(drltrace_path drltrace)
   get_target_path_for_execution(app_path drsyscall_app)
   prefix_cmd_if_necessary(drltrace_path OFF ${drltrace_path})
-
   add_test(drltrace ${drltrace_path} -- ${app_path})
   add_test(drltrace_libcalls ${drltrace_path} -logdir - -print_ret_addr -- ${app_path})
   add_test(drltrace_symargs ${drltrace_path} -logdir - -num_max_args 4 -- ${app_path})
 
+  add_test(drltrace_libargs ${drltrace_path} -logdir - -only_from_app -- ${app_path})
+
   #regex strings for libcalls and arguments printing test
   set(libcall_args1_01 "    arg 0: 0x([0-9a-f]+)\n    arg 1: 0x([0-9a-f]+)\n")
   set(libcall_ret "    and return to module id:([0-9]+), offset:0x([0-9a-f]+)\n")
+
 if (WIN32)
   set(libcall_args2_0 "    arg 0: 0x([0-9a-f]+) \\(type=HANDLE, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=int, size=0x([0-9a-f]+)\\)\n")
 
   set(libcall_name1 "~~([0-9a-f]+)~~ KERNELBASE.dll!VirtualQuery\n")
   set(libcall_name2 "~~([0-9a-f]+)~~ ntdll.dll!ZwQueryInformationProcess\n")
+  set(libcall_printf "arg 0: done\n \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
+  # some machines use WriteFile instead of printf, trying to handle both
+  set(libcall_WriteFile "arg 2: 0x([0-9a-f]+) \\(type=DWORD, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_both_variants "${libcall_printf}\;${libcall_WriteFile}")
 else ()
-  set(libcall_args2_0 "    arg 0: 0x([0-9a-f]+) \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_args2_0 "    arg 0: /dev/null \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=<unknown>\\*, size=0x([0-9a-f]+)\\)\n")
 
   set(libcalls_libcall_name1 "~~([0-9a-f]+)~~ libc.so.6!puts\n")
   set(libcalls_libcall_name2 "~~([0-9a-f]+)~~ libc.so.6!open\n")
+  set(libcall_both_variants "arg 0: done \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
 endif(WIN32)
   set_tests_properties(drltrace_libcalls PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name1}${libcall_args1_01}${libcall_ret})
   set_tests_properties(drltrace_symargs PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name2}${libcall_args2_0}${libcall_args2_1})
+  set_tests_properties(drltrace_libargs PROPERTIES PASS_REGULAR_EXPRESSION
+                       ${libcall_both_variants})
 endif (BUILD_TOOL_TESTS)
