i#2250 VS2017: Fix more link errors with duplicate symbols
Extends the i#1805 duplicate symbol handling to all generators.

Issue: #1805, #2250

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -79,8 +79,8 @@ if (UNIX)
   # to avoid conflicts with new declaration with "C" linkage in utils.h
   append_property_string(TARGET drltracelib COMPILE_FLAGS "-DNOLINK_STRCASESTR")
 endif()
-if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
-  # i#1805: see comment in drstrace/CMakeLists.txt
+if (WIN32)
+  # i#1805: see comment in drstrace/CMakeLists.txt.  For VS2017 avoid _isdigit.
   append_property_string(TARGET drltracelib LINK_FLAGS "/force:multiple")
 endif ()
 
