--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -83,9 +83,6 @@ install:
 
   ##################################################
   # XXX i#2145: point at Qt5 for testing drheapstat visualizer.
-  - dir "c:\Program Files (x86)\WiX Toolset"*  #TEMPORARY
-  - dir "c:\Program Files (x86)\WiX Toolset v3.11"  #TEMPORARY
-  - dir "c:\Program Files (x86)\WiX Toolset v3.11\bin"  #TEMPORARY
 
 before_build:
   - if "%configuration%"=="2013" call "c:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" x86
@@ -96,6 +93,11 @@ build_script:
   - git submodule update --init --recursive
   - mkdir build
   - cd build
+  # AppVeyor has WiX installed but it is not on the PATH.
+  # We first print out all versions to make it easier to update this if
+  # the version changes.
+  - dir "c:\Program Files (x86)\WiX Toolset"*
+  - set PATH="c:\Program Files (x86)\WiX Toolset v3.11\bin";%PATH%
   - echo %PATH%
   # The perl in c:\perl can't open a pipe so we use cygwin perl.
   - c:\cygwin\bin\perl ../tests/runsuite_wrapper.pl travis use_ninja %EXTRA_ARGS%
