i#2269 cmake: Eliminate cmake warnings
Updates the minimum cmake to 3.7, matching DR.

Removes the settings of cmake policies CMP0053 and CMP0054 to OLD
since they do not affect the code at all.

Removes the setting of CMP0029 to OLD.  This only affects Qt and in a
minor way and we are not actively supporting the Qt visualizer
anymore.

Sets CMP0022 to NEW and
s/LINK_INTERFACE_LIBRARIES/INTERFACE_LINK_LIBRARIES/.  All other
needed changes have already been done as part of #1481.

Replaces all LOCATION property uses with generator expressions, except
for one tricky case with a user-specified DR dir.  Moves the CMP0026
setting of OLD to just that condition, avoiding it for normal uses
cases.  We may want to remove user-specified DR support in any case.

Fixes a warning about no parent scope for the recent annotation target.

Issue: Dynamorio/dynamorio#1418, #1481, #2269, #1651
Fixes #1651
Fixes #2269

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,8 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-# We need 2.8.10.1 for crbug.com/159092
-# (For multi-export-set support for DRMF, we also need >= 2.8.10.)
-# (For Visual Studio generators, we also need >= 2.8.2 for output dir name control.)
-# (For Linux, we also need 2.6.4+ for cmake bug #8639 (asm support broken).)
-cmake_minimum_required(VERSION 2.8.10.1)
+# DR requires 3.7 which means we must also.
+cmake_minimum_required(VERSION 3.7)
 
 include(make/policies.cmake NO_POLICY_SCOPE)
 
@@ -543,7 +540,7 @@ if (WIN32)
     set(DDK_SFX "i386")
   else ()
     set(PROGFILES "$ENV{PROGRAMW6432}")
-    set(PROGFILES32 "$ENV{PROGRAMFILES(x86)}")
+    set(PROGFILES32 "$ENV{PROGRAMFILES\(x86\)}")
     if (X64)
       set(ARCH_SFX "x64")
       set(DDK_SFX "amd64")
@@ -1437,6 +1434,11 @@ endif (USE_DRSYMS)
 if (WIN32)
   # We need to link with ntdll.lib and dbghelp.lib which we get from DR
   if (USER_SPECIFIED_DynamoRIO_DIR)
+    # XXX i#1651: Replace this LOCATION with a generator expression.
+    # This is the only one left.
+    # We may want to drop support for USER_SPECIFIED_DynamoRIO_DIR in any case
+    # which is why no effort was put in to clean this up earlier.
+    cmake_policy(SET CMP0026 OLD)
     get_target_property(libbase drinjectlib LOCATION)
     get_filename_component(libpath ${libbase} PATH)
     set(ntimp_lib "${libpath}/ntdll_imports.lib")
@@ -1784,29 +1786,29 @@ else ()
 endif ()
 
 function (create_drrun_file frontend file_out name) # option list follows name
-  get_target_property(frontend_path ${frontend} LOCATION${location_suffix})
-  get_filename_component(frontend_name ${frontend_path} NAME)
   if (ANDROID AND TOOL_DR_MEMORY)
     set(frontend_name ${toolname}) # point at script, not launcher
   endif ()
   if (BUILDING_SUB_PACKAGE)
-    set(DRRUN_TOP "FRONTEND_REL=${INSTALL_PREFIX}/${BUILD_BIN}/${frontend_name}")
+    set(DRRUN_TOP "FRONTEND_REL=${INSTALL_PREFIX}/${BUILD_BIN}")
   else ()
-    set(DRRUN_TOP "FRONTEND_REL=../${BUILD_BIN}/${frontend_name}")
+    set(DRRUN_TOP "FRONTEND_REL=../${BUILD_BIN}")
   endif ()
   set(DRRUN_FILE "${DRRUN_DIR}/${name}${DRRUN_SFX}")
-  file(WRITE  ${DRRUN_FILE} "# Dr. Memory tool config file\n")
-  file(APPEND ${DRRUN_FILE} "${DRRUN_TOP}\n")
-  file(APPEND ${DRRUN_FILE} "TOOL_OP=-dr\n")
-  file(APPEND ${DRRUN_FILE} "TOOL_OP_DR_PATH\n")
-  file(APPEND ${DRRUN_FILE} "TOOL_OP_DR_BUNDLE=-dr_ops\n")
-  foreach (op ${ARGN})
-    file(APPEND ${DRRUN_FILE} "TOOL_OP=${op}\n")
-  endforeach ()
-  if (X64)
-    file(APPEND ${DRRUN_FILE}
-      "USER_NOTICE=Support for 64-bit applications under this tool is experimental.  Please report issues to http://drmemory.org/issues.\n")
+  set(DRRUN_CONTENTS "# Dr. Memory tool config file\n")
+  if (ANDROID AND TOOL_DR_MEMORY)
+    # Point at script, not launcher.
+    set(DRRUN_CONTENTS "${DRRUN_CONTENTS}${DRRUN_TOP}/${frontend}>\n")
+  else ()
+    set(DRRUN_CONTENTS "${DRRUN_CONTENTS}${DRRUN_TOP}/$<TARGET_FILE_NAME:${frontend}>\n")
   endif ()
+  set(DRRUN_CONTENTS "${DRRUN_CONTENTS}TOOL_OP=-dr\n")
+  set(DRRUN_CONTENTS "${DRRUN_CONTENTS}TOOL_OP_DR_PATH\n")
+  set(DRRUN_CONTENTS "${DRRUN_CONTENTS}TOOL_OP_DR_BUNDLE=-dr_ops\n")
+  foreach (op ${ARGN})
+    set(DRRUN_CONTENTS "${DRRUN_CONTENTS}TOOL_OP=${op}\n")
+  endforeach ()
+  file(GENERATE OUTPUT ${DRRUN_FILE} CONTENT "${DRRUN_CONTENTS}")
   install(FILES "${DRRUN_FILE}" DESTINATION "${DRRUN_INSTALL}/")
   set(${file_out} ${DRRUN_FILE} PARENT_SCOPE)
 
@@ -1873,7 +1875,10 @@ SET_PROPERTY(TARGET ${ARGV0} PROPERTY MAP_IMPORTED_CONFIG_RELMINSIZE RelWithDebI
   endif (NOT DEBUG_BUILD)
   # For install we want both debug and release:
   set(exported_targets_append "${exported_targets_append}${toadd}")
-  set(exported_targets_append "${exported_targets_append}" PARENT_SCOPE)
+  # Hack to avoid "no parent scope" complaint.
+  if (NOT "${ARGV}" MATCHES "drmemory_annotations")
+    set(exported_targets_append "${exported_targets_append}" PARENT_SCOPE)
+  endif ()
 endmacro(export_target)
 
 if (DR_ANNOTATIONS_SUPPORTED)
@@ -2269,9 +2274,14 @@ install(EXPORT ${exported_targets_name} DESTINATION ${DRMF_INSTALL})
 # We do this at install time once we have all binaries built, as it's a pain
 # to individually add post-build commands.
 if (WIN32)
-  get_target_property(verinfo_path verinfo LOCATION${location_suffix})
   install(CODE "include(\"${PROJECT_SOURCE_DIR}/make/rccheck.cmake\")")
-  install(CODE "check_version_resources(\"${PROJECT_BINARY_DIR}\" \"${verinfo_path}\")")
+  # We'd need cmake 3.14+ and CMP0087=NEW for a generator expression to work
+  # directly in install(CODE).  We instead have to make a file.
+  set(verinfo_locator "verinfo_locator.cmake")
+  file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${verinfo_locator}" CONTENT
+"set(VERINFO \"$<TARGET_FILE:verinfo>\")\n")
+  install(CODE "include(\"${CMAKE_CURRENT_BINARY_DIR}/${verinfo_locator}\")")
+  install(CODE "check_version_resources(\"${PROJECT_BINARY_DIR}\" \"\${VERINFO}\")")
 endif ()
 
 ###########################################################################
