--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ install:
   - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install doxygen jsonlint; fi
   # Install multilib for non-cross-compiling Linux builds:
   - >
-      if [[ "`uname`" == "Linux" && "$DRMEMORY_INSTALL_MULTILIB == yes ]]; then
+      if [[ "`uname`" == "Linux" && "$DRMEMORY_INSTALL_MULTILIB" == yes ]]; then
       sudo apt-get -y install g++-multilib; fi
   # Install cross-compilers for cross-compiling Linux build:
   - >
