--- a/.travis.yml
+++ b/.travis.yml
@@ -55,11 +55,16 @@ jobs:
     - if: type != cron AND env(TRAVIS_EVENT_TYPE) != cron
       os: linux
       compiler: gcc
+      env: DRMEMORY_INSTALL_MULTILIB=yes
+    - if: type != cron AND env(TRAVIS_EVENT_TYPE) != cron
+      os: osx
+      compiler: clang
+      env: DRMEMORY_INSTALL_MULTILIB=yes
     - if: type != cron AND env(TRAVIS_EVENT_TYPE) != cron
       os: linux
       compiler: clang
       # We need clang 9.0 for asm goto support (DRi#1799) for annotations.
-      env: CC=clang-9 CXX=clang++-9
+      env: CC=clang-9 CXX=clang++-9 DRMEMORY_INSTALL_MULTILIB=yes
       addons:
         apt:
           sources:
@@ -68,9 +73,16 @@ jobs:
             key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
           - clang-9
+    # AArchXX cross-compile with gcc, no tests:
     - if: type != cron AND env(TRAVIS_EVENT_TYPE) != cron
-      os: osx
-      compiler: clang
+      os: linux
+      compiler: gcc
+      env: DRMEMORY_CROSS_AARCHXX_LINUX_ONLY=yes
+    # Android ARM cross-compile with gcc, no tests:
+    - if: type != cron AND env(TRAVIS_EVENT_TYPE) != cron
+      os: linux
+      compiler: gcc
+      env: DRMEMORY_CROSS_ANDROID_ONLY=yes DRMEMORY_ANDROID_TOOLCHAIN='/tmp/android-gcc-arm-ndk-10e'
     #######################################################################
     # Package jobs
     - if: type = cron OR env(TRAVIS_EVENT_TYPE) = cron
@@ -88,7 +100,30 @@ install:
   # XXX: Remove the "brew update" step once Travis fixes their Mac VM's
   # on 11/15/17.  Xref https://github.com/travis-ci/travis-ci/issues/8552.
   - if [[ "`uname`" == "Darwin" ]]; then brew update; brew install nasm; fi
-  - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install g++-multilib doxygen jsonlint; fi
+  - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install doxygen jsonlint; fi
+  # Install multilib for non-cross-compiling Linux builds:
+  - >
+      if [[ "`uname`" == "Linux" && "$DRMEMORY_INSTALL_MULTILIB" == yes ]]; then
+      sudo apt-get -y install g++-multilib; fi
+  # Install cross-compilers for cross-compiling Linux build:
+  - >
+      if [[ "`uname`" == "Linux" && "$DRMEMORY_CROSS_AARCHXX_LINUX_ONLY" == yes ]]; then
+      sudo apt-get -y install g++-arm-linux-gnueabihf; fi
+  # Fetch and install Android NDK for Andoid cross-compile build only.
+  - >
+      if [[ "`uname`" == "Linux" && "$DRMEMORY_CROSS_ANDROID_ONLY" == yes ]]; then
+          cd /tmp
+          wget https://dl.google.com/android/repository/android-ndk-r10e-linux-x86_64.zip
+          unzip -q android-ndk-r10e-linux-x86_64.zip
+          android-ndk-r10e/build/tools/make-standalone-toolchain.sh --arch=arm \
+              --toolchain=arm-linux-androideabi-4.9 \
+              --platform=android-21 \
+              --install-dir=/tmp/android-gcc-arm-ndk-10e
+          # Manually force using ld.bfd, setting CMAKE_LINKER does not work.
+          ln -sf ld.bfd /tmp/android-gcc-arm-ndk-10e/arm-linux-androideabi/bin/ld
+          ln -sf arm-linux-androideabi-ld.bfd /tmp/android-gcc-arm-ndk-10e/bin/arm-linux-androideabi-ld
+          cd -
+      fi
 
 script:
   - tests/runsuite_wrapper.pl travis
