i#2266 memlayout: Add callstack frames to layout dump
Updates DR to 863a461c for dr_annotation_pass_pc().  Uses it to
acquire the PC for the current thread for the memory layout dump.

Adds callstack frames that overlap with the dumped stack to the layout
dump, with a pc, frame pointer, and function name for each.

Adds a function to tests/memlayout to test an additional frame.

Issue: #2266

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1754,11 +1754,12 @@ else ()
       SOURCES ${PROJECT_SOURCE_DIR}/tests/memlayout.cpp
       ${PROJECT_SOURCE_DIR}/drmemory/annotations_public.c CMAKE_FLAGS
       -DINCLUDE_DIRECTORIES=${framework_incdir}
-      -DCMAKE_C_FLAGS:STRING="${annot_cflags}")
+      -DCMAKE_C_FLAGS:STRING="${annot_cflags}"
+      OUTPUT_VARIABLE try_output)
     if (DR_ANNOTATIONS_SUPPORTED)
       message(STATUS "DR annotations are supported")
     else ()
-      message(STATUS "DR annotations are NOT supported: probably this is clang<9.0")
+      message(STATUS "DR annotations are NOT supported: probably this is clang<9.0: |${try_output}|")
     endif ()
   else ()
     set(DR_ANNOTATIONS_SUPPORTED ON)
