--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ jobs:
     - if: type = cron OR env(TRAVIS_EVENT_TYPE) = cron
       os: linux
       compiler: gcc
-      env: DEPLOY=yes DEPLOY_DOCS=yes
+      env: DEPLOY=yes DEPLOY_DOCS=yes DRMEMORY_INSTALL_MULTILIB=yes
     - if: type = cron OR env(TRAVIS_EVENT_TYPE) = cron
       os: osx
       compiler: clang
