i#2317: Fix shadow_check_range() crash
Fixes a bug where shadow_check_range() bypasses the shadow layer that
handles lazily-allocated shadow mappings and thus can crash.

Adds a test that reproduces the bug.

Adds a new DRMEMORY_ANNOTATE_MAKE_UNADDRESSABLE annotation to make it
easier to write the test.

Updates the allocator to use uint instead of ushort for its header's
request_diff field, as ushort is too small for a large allocation like
the one used in the test.  Since that affects the layout, goes ahead
and updates the prev_size_shr field to uint as well.

Fixes #2317

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2020 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2021 Google, Inc.  All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -507,6 +507,10 @@ newtest_ex(operators operators.cpp "" "${operators_drm_ops}" "${operators_dr_ops
   "ANY")
 newtest(float float.c)
 newtest(selfmod selfmod.c)
+if (UNIX)
+  newtest(mmap mmap.c)
+  target_link_libraries(mmap drmemory_annotations)
+endif ()
 newtest(patterns patterns.c)
 newtest_ex(state state.c "" "" "" OFF "" "ANY")
 
